--- a/ProyectoMancariBlue/Views/Shared/_Layout.cshtml
+++ b/ProyectoMancariBlue/Views/Shared/_Layout.cshtml
@@ -7,14 +7,45 @@
     <link rel="stylesheet" type="text/css" href="~/css/main.css">
     <link href="~/lib/sweetalert2/sweetalert2.min.css" rel="stylesheet" />
     <!-- Font-icon css-->
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
+
 </head>
 <body class="app sidebar-mini">
+
+    <style>
+        .overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            z-index: 9998;
+        }
+
+        .spinner {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 9999;
+            background-color: rgba(255, 255, 255, 0.8);
+            padding: 20px;
+            border-radius: 5px;
+            text-align: center;
+        }
+
+            .spinner i.fa-spinner {
+                color: #3498db;
+                font-size: 24px;
+            }
+
+    </style>
     <header class="app-header">
         <a class="app-header__logo" asp-controller="Home" asp-action="Index">MANCARI BLUE</a>
         <!-- <img src="~/img/logo.png" class="logo-image" width="30px" height="auto">  -->
-
         <!-- Sidebar toggle button--><a class="app-sidebar__toggle" href="#" data-toggle="sidebar" aria-label="Hide Sidebar"></a>
 
         <ul class="app-nav">
@@ -121,6 +152,14 @@
     <main role="main" class="app-content">
         @RenderBody()
     </main>
+    @*//Spinner*@
+    <div id="overlay" class="overlay"></div>
+
+    <div id="spinner" class="spinner">
+        <i class="fa fa-spinner fa-spin fa-3x fa-fw"></i>
+        <span class="sr-only">Loading...</span>
+    </div>
+
     <script src="~/js/jquery-3.3.1.min.js"></script>
     <script src="~/js/popper.min.js"></script>
     <script src="~/js/bootstrap.min.js"></script>
@@ -129,6 +168,7 @@
     <script src="~/lib/sweetalert2/sweetalert2.min.js"></script>
     <script type="text/javascript" src="~/js/plugins/chart.js"></script>
     <script src="~/js/main.js"></script>
+    <script src="~/js/moment.js"></script>
     @if (!string.IsNullOrEmpty(TempData["AlertMessage"] as string))
     {
         <script>
@@ -147,6 +187,122 @@
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
+   
+    <script type="text/javascript">
+
+
+        function OpenModal(modal) {
+
+            $("#" + modal).modal("show");
+
+        }
+
+        function GetDropDownValueSelected(inputId, dataListP) {
+            var inputElement = document.getElementById(inputId);
+            var selectedText = inputElement.value;
+
+            var dataList = document.getElementById(dataListP);
+            var selectedValue = null;
+
+            for (var i = 0; i < dataList.options.length; i++) {
+                if (dataList.options[i].textContent.toLowerCase() === selectedText.toLowerCase()) {
+                    selectedValue = dataList.options[i].value;
+                    return selectedValue;
+                }
+            }
+            return selectedValue;
+        }
+
+        function removeAccents(text) {
+            return text.normalize("NFD").replace(/[\u0300-\u036f]/g, "");
+        }
+
+        function GetDropDownTextContentSelected(inputId, dataListP) {
+            var inputElement = document.getElementById(inputId);
+            var selectedText = inputElement.value;
+
+            var dataList = document.getElementById(dataListP);
+            var selectedValue = null;
+
+            for (var i = 0; i < dataList.options.length; i++) {
+                if (dataList.options[i].textContent.toLowerCase() === selectedText.toLowerCase()) {
+                    selectedValue = dataList.options[i].textContent;
+                    return selectedValue;
+                }
+            }
+            return selectedValue;
+        }
+
+        function ValidateEmail(email) {
+            var regularExpression = /^[a-zA-Z0-9._%+-]+@@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
+
+            return regularExpression.test(email);
+        }
+
+        function showSpinner() {
+            $("#overlay").show();
+            $("#spinner").show();
+        }
+
+        function hideSpinner() {
+            $("#overlay").hide();
+            $("#spinner").hide();
+        }
+
+        function GetDropDownValueSelected(inputId, dataListP) {
+            var inputElement = document.getElementById(inputId);
+            var selectedText = inputElement.value;
+
+            var dataList = document.getElementById(dataListP);
+            var selectedValue = null;
+
+            for (var i = 0; i < dataList.options.length; i++) {
+                if (dataList.options[i].textContent.toLowerCase() === selectedText.toLowerCase()) {
+                    selectedValue = dataList.options[i].value;
+                    return selectedValue;
+                }
+            }
+            return selectedValue;
+        }
+
+        function GetDropDownTextContentSelected(inputId, dataListP) {
+            var inputElement = document.getElementById(inputId);
+            var selectedText = inputElement.value;
+
+            var dataList = document.getElementById(dataListP);
+            var selectedValue = null;
+
+            for (var i = 0; i < dataList.options.length; i++) {
+                if (dataList.options[i].textContent.toLowerCase() === selectedText.toLowerCase()) {
+                    selectedValue = dataList.options[i].textContent;
+                    return selectedValue;
+                }
+            }
+            return selectedValue;
+        }
+
+        function ActivateInputEvent(txtId) {
+            var eventoInput = new Event('input', {
+                bubbles: true,
+                cancelable: true,
+            });
+
+
+            document.getElementById(txtId).dispatchEvent(eventoInput);
+        }
+        function checkInput(input) {
+            input.value = input.value.replace(/[^a-zA-Z\s]+/g, '');
+        }
+        function checkInputNumber(input) {
+            input.value = input.value.replace(/[^0-9]/g, '');
+            if (input.value.length > 8) {
+                input.value = input.value.substr(0, 8);
+            }
+        }
+
+
+
+    </script>
     @await RenderSectionAsync("Scripts", required: false)
     @await RenderSectionAsync("modals", required: false)
 </body>
